<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/black"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/mainControllerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical" >

            <Button
                android:id="@+id/registerButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_selector"
                android:text="@string/register_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/user_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:hint="@string/login_example"
                android:inputType="textEmailAddress"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/pLayT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/password_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:hint="@string/password_example"
                android:inputType="textPassword"
                android:textColor="@color/gold" />

            <ProgressBar
                android:id="@+id/loginPbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:indeterminate="true"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@color/white"
                    android:weightSum="2" >

                    <Button
                        android:id="@+id/cButtonI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:text="Cancel" />

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:text="Login" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>